chroma vdb basic example

--- a/src/notebooks/tabert/uk_football/basic_k3_analysis.ipynb
+++ b/src/notebooks/tabert/uk_football/basic_k3_analysis.ipynb
@@ -369,72 +369,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((147, 6), torch.Size([1, 6, 768]), '---', (20, 4), torch.Size([1, 4, 768]))"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "col_emb_stadium = con_col_info[0][1]\n",
-    "col_emb_clubs_1 = con_col_info[1][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((147, 6), torch.Size([1, 6, 768]))"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stadium_df.shape, col_emb_stadium.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((20, 4), torch.Size([1, 4, 768]))"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clubs_1_df.shape, col_emb_clubs_1.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 768])"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "col_emb_stadium[:, 0, :].shape"
+    "col_emb_clubs_1 = con_col_info[1][1]\n",
+    "stadium_df.shape, col_emb_stadium.shape, '---', clubs_1_df.shape, col_emb_clubs_1.shape"
    ]
   },
   {
@@ -931,52 +883,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((147, 6), torch.Size([1, 6, 768]), '---', (20, 4), torch.Size([1, 4, 768]))"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "col_emb_stadium = con_col_info[0][1]\n",
-    "col_emb_clubs_1 = con_col_info[1][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((147, 6), torch.Size([1, 6, 768]))"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stadium_df.shape, col_emb_stadium.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((20, 4), torch.Size([1, 4, 768]))"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clubs_1_df.shape, col_emb_clubs_1.shape"
+    "col_emb_clubs_1 = con_col_info[1][1]\n",
+    "stadium_df.shape, col_emb_stadium.shape, '---', clubs_1_df.shape, col_emb_clubs_1.shape"
    ]
   },
   {
