setting for fasttext

--- a/documentation/refs.bib
+++ b/documentation/refs.bib
@@ -53,6 +53,15 @@
 }
 
 
+@inproceedings{Koleva2022AnalysisOT,
+  title={Analysis of the Attention in Tabular Language Models},
+  author={Aneta Koleva and Martin Ringsquandl and Volker Tresp},
+  year={2022},
+  url={https://api.semanticscholar.org/CorpusID:253164955}
+}
+
+
+
 
 
 
