Embedding unrelated tables example

--- a/src/notebooks/fasttext/column_embeddings.ipynb
+++ b/src/notebooks/fasttext/column_embeddings.ipynb
@@ -581,15 +581,183 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'compare_column_embeddings_of' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcompare_column_embeddings_of\u001b[49m(stadium_df, pl1_df, tabenc)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'compare_column_embeddings_of' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>C1</th>\n",
+       "      <th>C2</th>\n",
+       "      <th>cosine similarity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>0.967901</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Town / City</td>\n",
+       "      <td>Location</td>\n",
+       "      <td>0.940481</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Team</td>\n",
+       "      <td>Team</td>\n",
+       "      <td>0.924574</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Town / City</td>\n",
+       "      <td>Team</td>\n",
+       "      <td>0.8469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Team</td>\n",
+       "      <td>Location</td>\n",
+       "      <td>0.760189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Team</td>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>0.737822</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>Team</td>\n",
+       "      <td>0.65113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Town / City</td>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>0.526184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>Location</td>\n",
+       "      <td>0.506453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>League</td>\n",
+       "      <td>Team</td>\n",
+       "      <td>0.477763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>League</td>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>0.473928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>League</td>\n",
+       "      <td>Location</td>\n",
+       "      <td>0.3376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>Capacity</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Town / City</td>\n",
+       "      <td>Capacity</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Capacity</td>\n",
+       "      <td>Team</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Capacity</td>\n",
+       "      <td>Location</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Capacity</td>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Capacity</td>\n",
+       "      <td>Capacity</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Team</td>\n",
+       "      <td>Capacity</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>League</td>\n",
+       "      <td>Capacity</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             C1        C2  cosine similarity\n",
+       "0       Stadium   Stadium           0.967901\n",
+       "1   Town / City  Location           0.940481\n",
+       "2          Team      Team           0.924574\n",
+       "3   Town / City      Team             0.8469\n",
+       "4          Team  Location           0.760189\n",
+       "5          Team   Stadium           0.737822\n",
+       "6       Stadium      Team            0.65113\n",
+       "7   Town / City   Stadium           0.526184\n",
+       "8       Stadium  Location           0.506453\n",
+       "9        League      Team           0.477763\n",
+       "10       League   Stadium           0.473928\n",
+       "11       League  Location             0.3376\n",
+       "12      Stadium  Capacity               <NA>\n",
+       "13  Town / City  Capacity               <NA>\n",
+       "14     Capacity      Team               <NA>\n",
+       "15     Capacity  Location               <NA>\n",
+       "16     Capacity   Stadium               <NA>\n",
+       "17     Capacity  Capacity               <NA>\n",
+       "18         Team  Capacity               <NA>\n",
+       "19       League  Capacity               <NA>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
