add label option in embedding creation

--- a/src/notebooks/fasttext/column_embeddings.ipynb
+++ b/src/notebooks/fasttext/column_embeddings.ipynb
@@ -12,30 +12,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Embedding Table Columns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we try to embed every column of a single table:\n",
-    "\n",
-    "through fastText, for every cell in a categorical column, we'll compute a tokenization and then a vectorization of the cell.\n",
-    "\n",
-    "> cell --> token sequence --> token vector sequence --> cell vector"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "tabenc = TableEncoder()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Embedding Table Columns"
    ]
   },
   {
@@ -770,6 +759,324 @@
    "source": [
     "Without any kind of column preprocessing we have in output a lot of NaN values, since fastText \n",
     "cannot encode continuos values, such as 'Capacity'..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Embedding with column labels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here the changes are minimal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stadium_df = pd.read_csv(\n",
+    "    '/home/giovanni/unimore/TESI/src/data/uk_football/List_of_football_stadiums_in_England_1.csv'\n",
+    "    ).drop(['Rank\\n(England only)', 'Image', 'Capacity'], axis=1)\n",
+    "\n",
+    "pl1_df = pd.read_csv(\n",
+    "    '/home/giovanni/unimore/TESI/src/data/uk_football/Premier_League_1.csv'\n",
+    ").drop('Capacity', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['stadium'], ['town', 'city'], ['team'], ['league']]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from code.fasttext.embedding_utils import my_tokenizer\n",
+    "\n",
+    "\n",
+    "list(map(my_tokenizer, stadium_df.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>C1</th>\n",
+       "      <th>C2</th>\n",
+       "      <th>cosine similarity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>0.965624</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Town / City</td>\n",
+       "      <td>Location</td>\n",
+       "      <td>0.941236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Team</td>\n",
+       "      <td>Team</td>\n",
+       "      <td>0.923355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Town / City</td>\n",
+       "      <td>Team</td>\n",
+       "      <td>0.823234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Team</td>\n",
+       "      <td>Location</td>\n",
+       "      <td>0.77021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Team</td>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>0.722627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>Team</td>\n",
+       "      <td>0.675311</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>League</td>\n",
+       "      <td>Team</td>\n",
+       "      <td>0.539122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>Location</td>\n",
+       "      <td>0.524864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Town / City</td>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>0.513329</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>League</td>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>0.473007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>League</td>\n",
+       "      <td>Location</td>\n",
+       "      <td>0.343739</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             C1        C2  cosine similarity\n",
+       "0       Stadium   Stadium           0.965624\n",
+       "1   Town / City  Location           0.941236\n",
+       "2          Team      Team           0.923355\n",
+       "3   Town / City      Team           0.823234\n",
+       "4          Team  Location            0.77021\n",
+       "5          Team   Stadium           0.722627\n",
+       "6       Stadium      Team           0.675311\n",
+       "7        League      Team           0.539122\n",
+       "8       Stadium  Location           0.524864\n",
+       "9   Town / City   Stadium           0.513329\n",
+       "10       League   Stadium           0.473007\n",
+       "11       League  Location           0.343739"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compare_embeddings_of(stadium_df, pl1_df, tabenc, add_label=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>C1</th>\n",
+       "      <th>C2</th>\n",
+       "      <th>cosine similarity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>0.968443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Town / City</td>\n",
+       "      <td>Location</td>\n",
+       "      <td>0.943202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Team</td>\n",
+       "      <td>Team</td>\n",
+       "      <td>0.924123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Town / City</td>\n",
+       "      <td>Team</td>\n",
+       "      <td>0.847151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Team</td>\n",
+       "      <td>Location</td>\n",
+       "      <td>0.762015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Team</td>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>0.737731</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>Team</td>\n",
+       "      <td>0.649068</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Town / City</td>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>0.527324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>Location</td>\n",
+       "      <td>0.505664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>League</td>\n",
+       "      <td>Team</td>\n",
+       "      <td>0.477121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>League</td>\n",
+       "      <td>Stadium</td>\n",
+       "      <td>0.476466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>League</td>\n",
+       "      <td>Location</td>\n",
+       "      <td>0.339132</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             C1        C2  cosine similarity\n",
+       "0       Stadium   Stadium           0.968443\n",
+       "1   Town / City  Location           0.943202\n",
+       "2          Team      Team           0.924123\n",
+       "3   Town / City      Team           0.847151\n",
+       "4          Team  Location           0.762015\n",
+       "5          Team   Stadium           0.737731\n",
+       "6       Stadium      Team           0.649068\n",
+       "7   Town / City   Stadium           0.527324\n",
+       "8       Stadium  Location           0.505664\n",
+       "9        League      Team           0.477121\n",
+       "10       League   Stadium           0.476466\n",
+       "11       League  Location           0.339132"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compare_embeddings_of(stadium_df, pl1_df, tabenc, add_label=False)"
    ]
   }
  ],
